--- a/CrudSpringBoot/src/main/resources/application.properties
+++ b/CrudSpringBoot/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-
+server.port=8002
 
 # Configuration for MySQL Database
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/crud
+spring.datasource.url=jdbc:mysql://localhost:3306/crud1
 spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
