--- a/springBootCrud1/src/main/resources/application.properties
+++ b/springBootCrud1/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-
+server.port=8001
 # Configuration for MySQL Database
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/school
