--- a/SpringPractice/src/main/resources/application.properties
+++ b/SpringPractice/src/main/resources/application.properties
@@ -1,11 +1,10 @@
-server.port=8088
-spring.datasource.url=jdbc:mysql://localhost:3306/Emp
+
+server.port=8099
+spring.datasource.url=jdbc:mysql://localhost:3306/emp
 spring.datasource.username=root
-spring.datasource.password=	password
+spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
-
-
 
